syntax = "proto3";

option go_package = "pkg/pb";

package pb;

service Accounts {
    rpc Create(CreateAccountRequest) returns (CreateAccountResponse) {}
    rpc Fetch(FetchAccountRequest) returns (FetchAccountResponse) {}
    rpc List(ListRequest) returns (ListResponse){}
    
}

service Transactions {
    rpc Deposit (DepositRequest) returns (TransactionResponse){}
    rpc Transfer (TransferRequest) returns (TransactionResponse){}
}

service Auth {
    rpc Auth(AuthRequest) returns (AuthResponse){}
}

message CreateAccountRequest {
    string customer_name = 1;
    string document_number = 2;
    string phone_number = 3;
    string email = 4;
    string password = 5;
    string account_type = 6;
}

message CreateAccountResponse {
    string id = 1;
}

message FetchAccountRequest {}

message FetchAccountResponse {
    string id = 1;
    string account_type = 2;
    string customer_name = 3;
    string email = 4;
    string balance = 5;
    string status = 6;
}

message AuthRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
}

message DepositRequest {
    float value = 1;
}

message TransactionResponse {
    string id = 1;
}

message TransferRequest {
    string payee_id = 1;
    float value = 2;
}

message ListRequest {}

message ListResponse {
    repeated FetchAccountResponse accounts = 1;
}
